--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fcc-d3-bar-chart-proj",
   "version": "1.0.0",
   "description": "FCC d3 bar chart project",
-  "main": "index.html",
+  "main": "script.js",
   "dependencies": {
     "gh-pages": "^3.1.0"
   },
